# hierarchical-block-attention

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  README.md  build_push.sh  requirements.txt
docs/: design.md  evals.md  training-recipe.md
scripts/: evals.sh  heal.sh  make_data_manifest.sh  make_manifest.sh  provision.sh  shakedown.sh
src/hba/: __init__.py  attention.py  chunked_ce.py  config.py  convert.py  data_prep.py  dist_util.py  early_stop.py  evals.py  fam_data.py  gates.py  heal.py  kd.py  model.py  probes.py  replay_probes.py  summarizer.py
tests/: conftest.py  test_chunked_ce.py  test_distributed.py  test_early_stop.py  test_kd.py  test_probes_smoke.py  test_qknorm.py
