[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hba"
version = "0.1.0"
description = "Hierarchical Block Attention: near-constant per-query attention cost at any context length, via staged conversion of a pretrained dense-attention donor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]
